built_project/test/infrastructure/k8s/restapi_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-restapi
  namespace: k8s.meph.local
  labels:
    k8s-app: test-restapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test-restapi.<env>.
      http:
        paths:
          - path: /
            backend:
              serviceName: test-restapi
              servicePort: http
