built_project/test/infrastructure/k8s/restapi_network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-restapi
  namespace: k8s.meph.local
spec:
  podSelector:
    matchLabels:
      k8s-app: test-restapi
  ingress:
    # Prometheus traffic ingress for custom
    # metrics monitoring
    - ports:
        - port: http
      from:
        # Allow access from Prometheus
        - podSelector:
            matchLabels:
              prometheus: k8s
          namespaceSelector:
            matchLabels:
              role: monitoring
    - ports:
        - port: http
      from:
        # Allow access from Traefik
        - podSelector:
            matchLabels:
              k8s-app: traefik-ingress-controller
          namespaceSelector:
            matchLabels:
              role: ingress
